GameState and AI start